// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxInputField snapshots renders as disabled 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 > input {
  margin-left: 0;
  margin-right: 0;
}

.c3 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

.c2 {
  cursor: pointer;
  cursor: not-allowed;
}

<div
  className="c0"
  display="flex"
>
  <div
    className="c1"
  >
    <input
      aria-checked="false"
      aria-disabled="true"
      aria-invalid="false"
      aria-required="false"
      className="c2"
      disabled={true}
      id="react-aria-1"
      type="checkbox"
    />
  </div>
  <label
    className="c3"
    htmlFor="react-aria-1"
  >
    Option one
  </label>
</div>
`;

exports[`CheckboxInputField snapshots renders as disabled with a LeadingVisual 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 > input {
  margin-left: 0;
  margin-right: 0;
}

<div
  className="c0"
  display="flex"
>
  <div
    className="c1"
  />
</div>
`;

exports[`CheckboxInputField snapshots renders with a LeadingVisual 1`] = `
.c1 > input {
  margin-left: 0;
  margin-right: 0;
}

.c4 {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  margin-left: 8px;
  color: #24292f;
}

.c3 > * {
  min-width: 16px;
  min-height: 16px;
  fill: currentColor;
}

.c5 {
  font-weight: 600;
  font-size: 14px;
  display: block;
  color: #24292f;
  cursor: pointer;
}

.c2 {
  cursor: pointer;
}

<div
  className="c0"
  display="flex"
>
  <div
    className="c1"
  >
    <input
      aria-checked="false"
      aria-disabled="false"
      aria-invalid="false"
      aria-required="false"
      className="c2"
      id="react-aria-1"
      type="checkbox"
    />
  </div>
  <div
    className="c3"
    color="fg.default"
  >
    <svg
      aria-hidden="true"
      className="octicon octicon-mark-github"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<path fill-rule=\\"evenodd\\" d=\\"M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z\\"></path>",
        }
      }
      fill="currentColor"
      height={16}
      role="img"
      style={
        Object {
          "display": "inline-block",
          "overflow": "visible",
          "userSelect": "none",
          "verticalAlign": "text-bottom",
        }
      }
      viewBox="0 0 16 16"
      width={16}
    />
  </div>
  <div
    className="c4"
    display="flex"
  >
    <label
      className="c5"
      htmlFor="react-aria-1"
    >
      Option one
    </label>
  </div>
</div>
`;

exports[`CheckboxInputField snapshots renders with a LeadingVisual and caption 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 > input {
  margin-left: 0;
  margin-right: 0;
}

<div
  className="c0"
  display="flex"
>
  <div
    className="c1"
  />
</div>
`;

exports[`CheckboxInputField snapshots renders with a caption 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 > input {
  margin-left: 0;
  margin-right: 0;
}

.c3 {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  font-weight: 600;
  font-size: 14px;
  display: block;
  color: #24292f;
  cursor: pointer;
}

.c5 {
  font-size: 12px;
  color: #57606a;
  display: block;
}

.c2 {
  cursor: pointer;
}

<div
  className="c0"
  display="flex"
>
  <div
    className="c1"
  >
    <input
      aria-checked="false"
      aria-describedby="react-aria-1-caption"
      aria-disabled="false"
      aria-invalid="false"
      aria-required="false"
      className="c2"
      id="react-aria-1"
      type="checkbox"
    />
  </div>
  <div
    className="c3"
    display="flex"
  >
    <label
      className="c4"
      htmlFor="react-aria-1"
    >
      Option one
    </label>
    <span
      className="c5"
      color="fg.muted"
      display="block"
      fontSize={0}
      id="react-aria-1-caption"
    >
      Hint: a cool option
    </span>
  </div>
</div>
`;

exports[`CheckboxInputField snapshots renders with a custom ID 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 > input {
  margin-left: 0;
  margin-right: 0;
}

<div
  className="c0"
  display="flex"
>
  <div
    className="c1"
  />
</div>
`;

exports[`CheckboxInputField snapshots renders with a hidden label 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 > input {
  margin-left: 0;
  margin-right: 0;
}

.c3 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

.c2 {
  cursor: pointer;
}

<div
  className="c0"
  display="flex"
>
  <div
    className="c1"
  >
    <input
      aria-checked="false"
      aria-disabled="false"
      aria-invalid="false"
      aria-required="false"
      className="c2"
      id="react-aria-1"
      type="checkbox"
    />
  </div>
  <label
    className="c3"
    htmlFor="react-aria-1"
  >
    Option one
  </label>
</div>
`;

exports[`CheckboxInputField snapshots renders with a label an input 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 > input {
  margin-left: 0;
  margin-right: 0;
}

<div
  className="c0"
  display="flex"
>
  <div
    className="c1"
  />
</div>
`;
